[gd_scene load_steps=19 format=2]

[ext_resource path="res://images/mobs/lamp/lamp_bite_2.png" type="Texture" id=1]
[ext_resource path="res://images/mobs/lamp/lamp_bite_4.png" type="Texture" id=2]
[ext_resource path="res://images/mobs/lamp/lamp_bite_5.png" type="Texture" id=3]
[ext_resource path="res://images/mobs/lamp/lamp_bite_1.png" type="Texture" id=4]
[ext_resource path="res://images/mobs/lamp/lamp_bite_3.png" type="Texture" id=5]
[ext_resource path="res://scripts/LampMob.gd" type="Script" id=6]
[ext_resource path="res://images/mobs/lamp/stay.png" type="Texture" id=7]
[ext_resource path="res://scripts/BiteArea.gd" type="Script" id=8]
[ext_resource path="res://images/mobs/lamp/lamp_bite_6.png" type="Texture" id=9]
[ext_resource path="res://images/mobs/lamp/lamp_bite_7.png" type="Texture" id=10]
[ext_resource path="res://images/mobs/lamp/lamp_bite_8.png" type="Texture" id=11]
[ext_resource path="res://images/mobs/lamp/lamp_move_1.png" type="Texture" id=12]
[ext_resource path="res://images/mobs/lamp/lamp_move_2.png" type="Texture" id=13]
[ext_resource path="res://images/mobs/lamp/lamp_move_3.png" type="Texture" id=14]
[ext_resource path="res://images/light.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "bite",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "stay",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "unbite",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 41.0
height = 27.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 26.0
height = 18.0

[node name="LampMob" type="KinematicBody2D"]
position = Vector2( -1, 0 )
scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="Texture" type="AnimatedSprite" parent="."]
position = Vector2( -1, 0 )
frames = SubResource( 1 )
animation = "walk"
__meta__ = {
"_editor_description_": ""
}

[node name="Hitbox1" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 32.5, 0, 44.5, 4, 44.5, 12, 32.5, 12, 32.5, 24, -11.5, 24, 0.5, 12, 0.5, 0 )

[node name="Hitbox2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -23.5, 0 )
polygon = PoolVector2Array( -12, 0, 20, 0, 20, 12, 32, 24, -11.5, 24, -12, 12, -24, 12, -24, 4 )
disabled = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -27, -12 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 15 )
color = Color( 1, 1, 1, 0.588235 )
shadow_enabled = true

[node name="BiteArea" type="Area2D" parent="."]
rotation = 1.5708
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteArea"]
modulate = Color( 0.592157, 1, 0, 1 )
position = Vector2( 4.00011, 31.5 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
modulate = Color( 0.827451, 0, 1, 1 )
position = Vector2( 4.00008, 23.5 )
shape = SubResource( 3 )
